c/examples/writing-a-c-compiler-tests/tests/chapter_2/valid/bitwise.c
int main(void) {
    return ~12;
}