c/examples/writing-a-c-compiler-tests/tests/chapter_2/invalid_parse/parenthesize_operand.c
int main(void) {
    return (-)3;
}